@@ -1,6 +1,7 @@
 Release Notes
 
 * current
+  * added NOWAIT in killEventServiceConsumers
   * added NOWAIT in killJob
   * added validation check for pmerge 
   * added disableFurtherAttempt not to retry killed pmerge
